spade-tests/src/snapshots/spade_tests__ast_lowering__impl_method_generic_args_length_does_not_match_trait_method_generic_args_length_of_0.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait X {
    fn foo(self) -> bool;
}
struct A {}
impl X for A {
    fn foo<U1, U2>(self) -> bool {
        false
    }
}


error: Unexpected type parameters on impl of non-generic method
  ┌─ testinput:6:12
  │
2 │     fn foo(self) -> bool;
  │        --- But this is not generic
  ·
6 │     fn foo<U1, U2>(self) -> bool {
  │            ^^^^^^ Type parameters specified here
